# The-Matrix

./: .gitignore  loading.py
doc/: VE_or_not.md  dot_env.md  download_needed_packages.md  vm_or_not.md
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env  .env.example  oracle.py
