[project]
name = "ex3"
version = "0.1.0"
description = ""
authors = [
    {name = "AhmadAL-Quraan",email = "ahmadquraan.git@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pandas",
    "matplotlib",
    "PyQt6" 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
